--- a/locales/de_DE.po
+++ b/locales/de_DE.po
@@ -20015,7 +20015,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Handlung wenn ein Benutzer aus dem LDAP-Verzeichnis gelöscht wird"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Zeitzone des GLPI Servers"
 
 #: inc/config.class.php:738 install/install.php:216
