--- a/locales/eo.po
+++ b/locales/eo.po
@@ -19836,7 +19836,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Действие, если пользователь удалён в LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Временная зона GLPI сервера"
 
 #: inc/config.class.php:738 install/install.php:216
