--- a/locales/es_AR.po
+++ b/locales/es_AR.po
@@ -19946,7 +19946,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Acción cuando un usuario es eliminado del directorio LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Zona horaria del servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
