--- a/locales/fr_FR.po
+++ b/locales/fr_FR.po
@@ -20125,7 +20125,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Action lorsqu'un utilisateur est supprimé de l'annuaire LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Fuseau horaire du serveur GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
