--- a/locales/id_ID.po
+++ b/locales/id_ID.po
@@ -19463,7 +19463,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Aksi ketika pengguna dihapus dari direktori LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr ""
 
 #: inc/config.class.php:738 install/install.php:216
