--- a/locales/nl_BE.po
+++ b/locales/nl_BE.po
@@ -19925,7 +19925,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Actie wanneer een gebruiker werd verwijderd uit het LDAP directory"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI server tijdszone"
 
 #: inc/config.class.php:738 install/install.php:216
