--- a/locales/th_TH.po
+++ b/locales/th_TH.po
@@ -19466,7 +19466,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "ดำเนินการเมื่อผู้ใช้จะถูกลบจาก LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "เขตเวลาเซิร์ฟเวอร์ GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
