--- a/locales/vi_VN.po
+++ b/locales/vi_VN.po
@@ -19512,7 +19512,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Hành động khi người dùng bị xóa từ thư mục LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI vùng thời gian máy chủ"
 
 #: inc/config.class.php:738 install/install.php:216
