--- a/locales/bg_BG.po
+++ b/locales/bg_BG.po
@@ -19831,7 +19831,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Действие, когато потребител е изтрит от LDAP директория"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI сървър часова зона"
 
 #: inc/config.class.php:738 install/install.php:216
