--- a/locales/ca_ES.po
+++ b/locales/ca_ES.po
@@ -19857,7 +19857,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Acció quan un usuari és suprimit de LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Fus horari del servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
