--- a/locales/cs_CZ.po
+++ b/locales/cs_CZ.po
@@ -20587,7 +20587,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Akce, když bude uživatel smazán z LDAP adresáře"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Časová zóna GLPI serveru"
 
 #: inc/config.class.php:738 install/install.php:216
