--- a/locales/da_DK.po
+++ b/locales/da_DK.po
@@ -19829,7 +19829,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Handling, når en bruger slettes fra LDAP biblioteket"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI server tidszone"
 
 #: inc/config.class.php:738 install/install.php:216
