--- a/locales/el_GR.po
+++ b/locales/el_GR.po
@@ -19863,7 +19863,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Ενέργεια όταν ο χρήστης διαγράφεται από τον κατάλογο LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Ζώνη ώρας εξυπηρετητή GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
