--- a/locales/es_ES.po
+++ b/locales/es_ES.po
@@ -19966,7 +19966,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Acción cuando se suprime un usuario de un directorio LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Zona horaria del servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
