--- a/locales/et_EE.po
+++ b/locales/et_EE.po
@@ -19923,7 +19923,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Mida teha, kui kasutaja kustutatakse LDAP katalogist"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI serveri ajavöönd"
 
 #: inc/config.class.php:738 install/install.php:216
