--- a/locales/eu_ES.po
+++ b/locales/eu_ES.po
@@ -19869,7 +19869,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Erabiltzailea LDAPetik ezabatzarekoan egin beharreko ekintza"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI zerbitzarean ordu-zona"
 
 #: inc/config.class.php:738 install/install.php:216
