--- a/locales/fa_IR.po
+++ b/locales/fa_IR.po
@@ -19770,7 +19770,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "عمل هنگامی که کاربر از فهرست LDAP حذف شده است"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "منطقه زمانی سرور GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
