--- a/locales/fi_FI.po
+++ b/locales/fi_FI.po
@@ -19857,7 +19857,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Toiminto, joka tehdään, kun käyttäjä poistetaan LDAP-hakemistosta."
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI-palvelimen aikavyöhyke"
 
 #: inc/config.class.php:738 install/install.php:216
