--- a/locales/gl_ES.po
+++ b/locales/gl_ES.po
@@ -19854,7 +19854,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Acción cando un usuario é eliminado do LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Zona horaria do servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
