--- a/locales/hr_HR.po
+++ b/locales/hr_HR.po
@@ -20334,7 +20334,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Radnja, kad se korisnik briše iz LDAP mape"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Vremenska zona GLPI poslužitelja"
 
 #: inc/config.class.php:738 install/install.php:216
