--- a/locales/is_IS.po
+++ b/locales/is_IS.po
@@ -19753,7 +19753,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr ""
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr ""
 
 #: inc/config.class.php:738 install/install.php:216
