--- a/locales/ja_JP.po
+++ b/locales/ja_JP.po
@@ -19452,7 +19452,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "LDAPディレクトリからユーザーが削除された場合"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPIが動作しているサーバーのタイムゾーン"
 
 #: inc/config.class.php:738 install/install.php:216
