--- a/locales/nb_NO.po
+++ b/locales/nb_NO.po
@@ -19810,7 +19810,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr ""
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Tidssone for GLPI server"
 
 #: inc/config.class.php:738 install/install.php:216
