--- a/locales/pt_BR.po
+++ b/locales/pt_BR.po
@@ -20080,7 +20080,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Ação quando um usuário é excluído do diretório LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Fuso horário do servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
