--- a/locales/pt_PT.po
+++ b/locales/pt_PT.po
@@ -19943,7 +19943,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Acção quando um utilizador é removido do directório LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Fuso horário do servidor GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
