--- a/locales/sk_SK.po
+++ b/locales/sk_SK.po
@@ -20625,7 +20625,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Akcia, ak je používateľ vymazaný z LDAP adresára"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Časová zóna GLPI servera"
 
 #: inc/config.class.php:738 install/install.php:216
