--- a/locales/sr_RS.po
+++ b/locales/sr_RS.po
@@ -20147,7 +20147,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Akcija kada je korisnik obrisan iz LDAP direktorijuma"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Vremenska zona GLPI servera"
 
 #: inc/config.class.php:738 install/install.php:216
