--- a/locales/tr_TR.po
+++ b/locales/tr_TR.po
@@ -20014,7 +20014,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "LDAP dizininden kullanıcı silindiğinde yapılacak işlem"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI sunucusunun saat dilimi"
 
 #: inc/config.class.php:738 install/install.php:216
