--- a/locales/uk_UA.po
+++ b/locales/uk_UA.po
@@ -20619,7 +20619,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "Дія після видалення користувача з AD/LDAP"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "Годинний пояс сервера GLPI"
 
 #: inc/config.class.php:738 install/install.php:216
