--- a/locales/zh_CN.po
+++ b/locales/zh_CN.po
@@ -19446,7 +19446,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "LDAP目录中删除用户后执行"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI服务器时区"
 
 #: inc/config.class.php:738 install/install.php:216
