--- a/locales/zh_TW.po
+++ b/locales/zh_TW.po
@@ -19425,7 +19425,7 @@ msgid "Action when a user is deleted from the LDAP directory"
 msgstr "當使用者從 LDAP目錄中刪除後執行"
 
 #: inc/config.class.php:696
-msgid "GLPI server time zone"
+msgid "Graphoun server time zone"
 msgstr "GLPI 伺服器時區"
 
 #: inc/config.class.php:738 install/install.php:216
